Coverity analysis defect 122052: Uninitialized scalar field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • QO 2022-05-02
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/query/fle/server_rewrite.h:210: UNINIT_CTOR 122052 Class member declaration for "_rewroteLastExpression".
      /src/mongo/db/query/fle/server_rewrite.h:190: UNINIT_CTOR 122052 Non-static class member "_rewroteLastExpression" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Hana Pearlman (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: