SERVER-65410: Fix uninitialized scalar field in server_rewrite